--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
             <div class="box text-box center">
                <p class="text" id="right-msg">GRAB SOME HEALTHY BREAKFAST!!!</p>
             </div>
-            <img src="./images/Component.png" alt="" class="img" id="img">
+            <img src="/Component.png" alt="" class="img" id="img">
         </div>
     </div>
     
