--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
 <body>
     <div class="container">
         <div class="left">
-            <img src="clock_logo.png" alt="">
+            <img src="/clock_logo.png" alt="">
             <div class="alarm center">
                 <div class="alarm-box">
                     <div class="set-time">
-                        <img src="wake_up.svg" alt="" class="icon">
+                        <img src="/wake_up.svg" alt="" class="icon">
                         <p class="alarm-text">Set wake up time</p>
                         <form>
                           <select name="time"  id="wake-time">
@@ -28,7 +28,7 @@
                     </div>
                     <div class="line"></div>
                     <div class="set-time">
-                        <img src="lunch_time.svg" alt="" class="icon"> 
+                        <img src="/lunch_time.svg" alt="" class="icon"> 
                         <p class="alarm-text">Set lunch time</p>
                         <form>
                           <select name="time" id="lunch-time">
@@ -38,7 +38,7 @@
                     </div>
                     <div class="line"></div>
                     <div class="set-time">
-                        <img src="nap_time.svg" alt="" class="icon">
+                        <img src="/nap_time.svg" alt="" class="icon">
                         <p class="alarm-text">Set nap time</p>
                         <form>
                           <select name="time" id="nap-time">
@@ -48,7 +48,7 @@
                     </div>
                     <div class="line"></div>
                     <div class="set-time">
-                        <img src="night1.png" alt="" class="icon">
+                        <img src="/night1.png" alt="" class="icon">
                         <p class="alarm-text">Set night time</p>
                         <form>
                           <select name="time"  class="select" id="night-time">
@@ -95,7 +95,7 @@
             <div class="box text-box center">
                <p class="text" id="right-msg">GRAB SOME HEALTHY BREAKFAST!!!</p>
             </div>
-            <img src="Component.png" alt="" class="img" id="img">
+            <img src="/Component.png" alt="" class="img" id="img">
         </div>
     </div>
     
